log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 11:26:33 AM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f460e3d
Fri 31 Mar 2023 11:30:22 AM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:19: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   18 |   nuevaLista.size = NULL;
      |                   ^
arraylist.c:15:13: error: variable ‘nuevaLista’ set but not used [-Werror=unused-but-set-variable]
   15 |   ArrayList nuevaLista;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d78fbf5
Fri 31 Mar 2023 11:31:48 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:20:10: error: function returns address of local variable [-Werror=return-local-addr]
   20 |   return &nuevaLista;
      |          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b234502
